--- a/flashcard_dev.html
+++ b/flashcard_dev.html
@@ -2844,14 +2844,19 @@ i<!DOCTYPE html>
         <!-- Category Browser (Collapsible & Scrollable) - Practice existing vocabulary -->
         <div class="category-browser" id="categoryBrowser" style="background: #f0f9ff; padding: 15px; border-radius: 15px; margin-bottom: 20px; border: 3px solid #667eea;">
             <!-- Header with collapse button -->
-            <div style="display: flex; align-items: center; justify-content: space-between; margin-bottom: 10px; cursor: pointer;" onclick="toggleCategoryBrowser()">
-                <div>
+            <div style="display: flex; align-items: center; justify-content: space-between; margin-bottom: 10px;">
+                <div style="cursor: pointer;" onclick="toggleCategoryBrowser()">
                     <h3 style="color: #667eea; margin: 0; display: inline-block;">📚 Your Vocabulary Categories</h3>
                     <span id="categoryCount" style="font-size: 0.85em; color: #999; margin-left: 10px;"></span>
                 </div>
-                <button id="categoryBrowserToggle" style="background: #667eea; color: white; border: none; padding: 8px 15px; border-radius: 8px; cursor: pointer; font-size: 1em; transition: all 0.3s;">
-                    ▼ Hide
-                </button>
+                <div style="display: flex; gap: 8px;">
+                    <button onclick="event.stopPropagation(); renderCategoryBrowser();" style="background: #10b981; color: white; border: none; padding: 8px 15px; border-radius: 8px; cursor: pointer; font-size: 1em; transition: all 0.3s;" onmouseenter="this.style.background='#059669'" onmouseleave="this.style.background='#10b981'" title="Refresh categories">
+                        🔄 Refresh
+                    </button>
+                    <button id="categoryBrowserToggle" onclick="event.stopPropagation(); toggleCategoryBrowser();" style="background: #667eea; color: white; border: none; padding: 8px 15px; border-radius: 8px; cursor: pointer; font-size: 1em; transition: all 0.3s;">
+                        ▼ Hide
+                    </button>
+                </div>
             </div>
             <div id="categoryBrowserContent" style="overflow: hidden; transition: max-height 0.3s ease-out; max-height: 2000px;">
                 <p style="color: #666; font-size: 0.9em; margin-bottom: 15px;">Browse and practice your saved vocabulary organized by categories</p>
